--- a/flipit.html
+++ b/flipit.html
@@ -91,7 +91,7 @@
             <div class="img-responsive">
                 <img src="/Asset/img/flipguy.svg" class="img-fluid" alt="">
                 <div>
-                    <button> <span><i class="fa fa-play-circle" aria-hidden="true"></i></span> Watch Video</button>
+                    <!-- <button> <span><i class="fa fa-play-circle" aria-hidden="true"></i></span> Watch Video</button> -->
                 </div>
             </div>
             <div class="img-responsive arrow">
@@ -101,10 +101,61 @@
                 <img src="/Asset/img/fliptrack1.svg" class="img-fluid" alt="">
             </div>
             <div class="img-responsive">
-               <span><img src="/Asset/img/list.svg" width="30px" alt=""></span> <p>Get your item listed</p>  
-              <span><img src="/Asset/img/price.svg"  width="30px" alt=""></span>  <p>Get value for your item</p>
-              <span><img src="/Asset/img/save-money.svg"  width="30px" alt=""></span>  <p>Get paid</p>
+                <span><img src="/Asset/img/list.svg" width="30px" alt=""></span>
+                <p>Get your item listed</p>
+                <span><img src="/Asset/img/price.svg" width="30px" alt=""></span>
+                <p>Get value for your item</p>
+                <span><img src="/Asset/img/save-money.svg" width="30px" alt=""></span>
+                <p>Get paid</p>
             </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <form action="/action_page.php">
+                        <input type="file" id="myFile" name="filename">
+                        <br>
+                        <div class="upload">
+                            <img src="/Asset/img/Uploadphoto.svg" width="50px" alt="">
+                        </div>
+                        <!-- <input type="submit"> -->
+                        <div class="col-md-6">
+                            <label for="text">Item title</label><br>
+                            <input type="text" class="form-control">
+                        </div>
+                        <div class="col-md-6">
+                            <label for="text">Item Quantity</label><br>
+                            <input type="text" class="form-control">
+                        </div>
+                        <div class="mb-3">
+                            <!-- <label for="validationTextarea" class="form-label"> <div class="mb-3"> -->
+                            <label for="validationTextarea" class="form-label">Message</label>
+                            <textarea class="form-control " id="validationTextarea" cols="30" rows="10"
+                                required></textarea>
+                            <div class="invalid-feedback"> Please enter a message in the textarea.</div>
+                        </div></label>
+                        <br> 
+                        <button type="submit" class="btn mt-3 w-100">Send</button>
+                    </form>
+                </div>
+            <!-- </div> -->
+            <div class="col-md-6 justify-content-center text-align-center d-flex">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae volutpat auctor eget eu egestas
+                    tristique suspendisse. Congue hendrerit quam id placerat nulla eget vitae enim. Eleifend posuere
+                    donec purus, est pulvinar. Nisl elementum posuere adipiscing mauris et, mauris. Arcu nibh lectus
+                    elementum faucibus feugiat dignissim nisl libero. Turpis nunc dui velit, quisque sit posuere ac arcu
+                    proin. Quis aliquam ac, vitae neque ullamcorper.
+                    Luctus adipiscing porttitor arcu, donec consequat turpis id aliquam. Velit urna augue nunc integer
+                    mauris ante. Tortor justo vel venenatis ullamcorper accumsan, eros. Vitae aliquet dignissim amet in.
+                    Magna turpis velit laoreet porttitor enim, aliquam. Consectetur diam morbi sit nec in. Vitae orci
+                    sed nibh pulvinar scelerisque vitae fames odio nibh. Augue aenean luctus adipiscing elit, sodales
+                    porta sed eu elit. Laoreet velit adipiscing ornare amet morbi tellus amet quis eget. Ipsum dui, sit
+                    fermentum, in dictum. Curabitur.</p>
+                
+            </div>
+        </div>
         </div>
     </section>
 
