--- a/contactUs.html
+++ b/contactUs.html
@@ -93,46 +93,16 @@
                     </p>
                     <p><i>Except on public Holiday</i></p>
                     <h3 class="mb-5">OUR MAP</h3>
-                    <div class="mt-5">
+                    <div class="mt-5 map ">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3958.843014223123!2d3.369519713973434!3d7.144144794841429!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103a4bb62acf183d%3A0xd4fe4ebecaa2287f!2sIdi-aba%2C%20Abeokuta!5e0!3m2!1sen!2sng!4v1650377297946!5m2!1sen!2sng"
-                            width="600" height="650" class="img-fluid" allowfullscreen="" loading="lazy"
+                            width="600" height="650" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
                 <div class="col-md-5 pt-3 contactform">
                     <p>Get in touch </p>
-                    <!-- <form action="" class="row g-4 needs-validation" novalidate>
-                        <div class="col-md-12">
-                            <h3>Get in touch</h3>
-                        </div>
-                        <div class="col-lg-12">
-                            <label for="validationCustom01" class="form-label">Name</label>
-                            <input type="text" class="form-control" id="validationCustom01"
-                                placeholder="Your full name" required />
-                            <div class="invalid-feedback">Full name is required</div>
-                        </div>
-                        <div class="col-lg-12">
-                            <label for="validationCustom02" class="form-label">Email address</label>
-                            <input type="email" class="form-control" id="validationCustom02"
-                                placeholder="Your email address" required />
-                            <div class="invalid-feedback">Email is required</div>
-                        </div>
-                        <div class="col-lg-12">
-                            <label for="validationCustom03" class="form-label">Subject</label>
-                            <input type="text" class="form-control" id="validationCustom03" required />
-                            <div class="invalid-feedback">This field is required</div>
-                        </div>
-                        <div class="col-lg-12">
-                            <label for="validationCustom04" class="form-label">Message</label>
-
-                            <textarea name="message" class="form-control" id="validationCustom04"
-                                style="width: 100%; height: 260px;" required></textarea>
-                            <div class="invalid-feedback">Leave a message</div>
-                            <button type="submit" class="btn btn-primary mt-5 w-100">Send</button>
-
-                        </div> -->
-
+              
                      <form action="" class="needs-validation" novalidate> 
                          <form class="row g-4">
                         <div class="col-md-12">
