--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 </div>
                 <nav class="navmenu df just" id="nav">
                     <ul class="navlinks">
-                        <li> <a href="#aboutus">About us</a></li>
-                        <li class="services"> <a href="">Services</a>
+                        <li> <a href="./pages/AboutUS.html">About us</a></li>
+                        <li class="services"> <a href="./pages/services.html">Services</a>
                             <div class="sub-menu">
                                 <ul class="">
                                     <li> <a href="">
