--- a/FAQ.html
+++ b/FAQ.html
@@ -50,7 +50,7 @@
                         <a class="nav-link" href="FAQ.html">FAQ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">  Login</a>
+                        <a class="nav-link" href="login.html">  Login</a>
                     </li>
                 </ul>
 
