--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                                     Can anyone work as agent or collector, Also, can i operate from anywhere in Nigeria?
                                 </button>
                             </h2>
-                            <div id="collapse" class="accordion-collapse collapse" aria-labelledby="headingFive"
+                            <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
                                     <strong>This is the third item's accordion body.</strong> It is hidden by default,
