--- a/collector.html
+++ b/collector.html
@@ -227,7 +227,7 @@
                                         Nigeria?
                                     </button>
                                 </h2>
-                                <div id="collapse" class="accordion-collapse collapse" aria-labelledby="headingFive"
+                                <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
                                     data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
                                         <strong>This is the third item's accordion body.</strong> It is hidden by
