--- a/index.html
+++ b/index.html
@@ -475,31 +475,34 @@
                         <input type="e-mail" placeholder="Enter your email address">
                         <span><button>Sign up</button></span>
                     </form>
+                </div>
+                <div class="lists">
+                    <p>About</p>
+                    <p>Contact Us</p>
+                    <p>Services</p>
+                    <p>FAQ</p>
+                </div>
+                <div class="col-lg-12">
+                    <span class="d-flex justify-content-center">
+                        <img src="/images/facebookk.png" alt="">
+                        <img src="/images/twitterr.png" alt="">
+                        <img src="/images/instagramm.png" alt="">
+                        <img src="/images/linkedinn.png" alt="">
+                        <img src="/images/mail.png" alt="">
+                    </span>
+                </div>
+                <hr>
+                <span class="col-lg-12 d-flex justify-content-center lastPP">Copyright © 2020, Created by Wastexpert
+                    Team</span>
             </div>
-            <div class="lists">
-                <p>About</p>
-                <p>Contact Us</p>
-                <p>Services</p>
-                <p>FAQ</p>
-            </div>
-            <div class="col-lg-12">
-                <span class="d-flex justify-content-center">
-                    <img src="/images/facebookk.png" alt="">
-                    <img src="/images/twitterr.png" alt="">
-                    <img src="/images/instagramm.png" alt="">
-                    <img src="/images/linkedinn.png" alt="">
-                    <img src="/images/mail.png" alt="">
-                </span>
-            </div>
-            <hr>
-            <span class="col-lg-12 d-flex justify-content-center lastPP">Copyright © 2020, Created by Wastexpert Team</span>
-        </div>
 
     </footer>
 
 
 
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </body>
 
