--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <nav class="navmenu df just" id="nav">
                     <ul class="navlinks">
                         <li> <a href="#aboutus">About us</a></li>
-                        <li class="services"> <a href="">Services</a>
+                        <li class="services"> <a href="pages/services.html">Services</a>
                             <div class="sub-menu">
                                 <ul class="">
                                     <li> <a href="">
@@ -69,7 +69,7 @@
                         </li>
                         <li> <a href="#Contactus">Contact us</a></li>
                         <li><a href="#FAQ">FAQ</a></li>
-                        <li><button>Login</button></li>
+                        <li> <a href="/loginPage.html"><button>Login</button></a></li>
                     </ul>
                 </nav>
                 <div class="icon" id="bar"><i class="fas fa-bars" id="icon"></i></div>
@@ -84,7 +84,7 @@
                     <h1>Waste to Wealth just got better</h1>
                     <p>The Waste to Wealth Mission brings scientific processing of waste to the forefront to build a
                         zero landfill and zero waste nation.</p>
-                    <button class="btn1">Get Started</button>
+                  <a href="/signup.html" target="blank"><button class="btn1">Get Started</button></a>  
                     <button class="btn2"><i class="fa-solid fa-circle-play"></i></button>
                 </div>
                 <div class="col-md-6 myimg">
@@ -148,7 +148,7 @@
                         ohdhg ighghgd nddhghe hdohge khd dhdg lhohgohe lobortis tincidunt. Faucibus felis nulla faucibus
                         tellus nunc. Platea risus nibh feugiat dui phasellus phasellus viverra ac leo. Pellentesque
                         venenatis, ut risus at. dolor sit amet, consectetur adipiscing elit. Vitae, </p>
-                    <button class="mt-5">Read More</button>
+                   <a href="pages/AboutUS.html"><button class="mt-5">Read More</button></a> 
                 </div>
             </div>
         </div>
@@ -267,7 +267,7 @@
             </div>
             <div class="col-lg-12">
                 <div class="d-flex align-items-center justify-content-center">
-                    <button>See More</button>
+                     <a href="/pages/treasureList.html"><button>See More</button></a>
                 </div>
             </div>
         </div>
@@ -503,13 +503,8 @@
 
 
 
-<<<<<<< HEAD
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-=======
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
->>>>>>> Babatunde
         crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </body>
