--- a/pages/services.html
+++ b/pages/services.html
@@ -38,19 +38,19 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav  mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">About us</a>
+                        <a class="nav-link active" aria-current="page" href="/pages/AboutUS.html">About us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">services</a>
+                        <a class="nav-link" href="/pages/services.html">services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">contact us</a>
+                        <a class="nav-link" href="/pages/contact.html">contact us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">FAQ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
+                        <a class="nav-link" href="/pages/loginPage.html">Login</a>
                     </li>
                 </ul>
 
@@ -76,7 +76,7 @@
                         massa aenean neque
                         pulvinar tortor, a. Nisl, dictumst eu urna, at odio scelerisque pulvinar a, magna.</p>
                     <div>
-                        <a href=""> <button> Pick Up Request</button></a>
+                        <a href="/pages/services.html"> <button> Pick Up Request</button></a>
                         <a href=""> <button> <span><i class="fa-solid fa-circle-play"></i></span> Watch
                                 Video</button></a>
                     </div>
@@ -116,8 +116,6 @@
                         <a href=""> <button> <span><i class="fa-solid fa-circle-play"></i></span> Watch
                                 Video</button></a>
                     </div>
-
-
                 </div>
             </div>
         </div>
