--- a/board.html
+++ b/board.html
@@ -18,11 +18,11 @@
             <img src="/img/close.svg" alt="" id="closeBtn">
         </div>
         <img src="/img/boardLogo.svg" alt="">
-        <ul>
-            <a href="#">About Us</a>
-            <a href="#">Services</a>
-            <a href="#">Contact us</a>
-            <a href="#">FAQ</a>
+        <ul id="navOption">
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contact us</a></li>
+            <li><a href="#">FAQ</a></li>
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
