--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Wastexpert</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="/SASS/style.css">
+    <link rel="stylesheet" href="/vendor/SASS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -69,7 +69,7 @@
                         </li>
                         <li> <a href="#Contactus">Contact us</a></li>
                         <li><a href="#FAQ">FAQ</a></li>
-                        <li> <a href="/loginPage.html"><button>Login</button></a></li>
+                        <li> <a href="/pages/loginPage.html"><button>Login</button></a></li>
                     </ul>
                 </nav>
                 <div class="icon" id="bar"><i class="fas fa-bars" id="icon"></i></div>
@@ -84,8 +84,8 @@
                     <h1>Waste to Wealth just got better</h1>
                     <p>The Waste to Wealth Mission brings scientific processing of waste to the forefront to build a
                         zero landfill and zero waste nation.</p>
-                  <a href="/signup.html" target="blank"><button class="btn1">Get Started</button></a>  
-                    <button class="btn2"><i class="fa-solid fa-circle-play"></i></button>
+                    <a href="/signup.html" target="blank"><button class="btn1">Get Started</button></a>
+                    <a href="https://youtu.be/4JDGFNoY-rQ"><button class="btn2"><i class="fa-solid fa-circle-play"></i></button></a> 
                 </div>
                 <div class="col-md-6 myimg">
                     <img src="/images/FirstSectionImg.png" alt="image" class="imgboy">
@@ -93,7 +93,6 @@
             </div>
         </div>
     </section>
-
     <section class="section2">
         <div class="container">
             <div class="row">
@@ -148,7 +147,7 @@
                         ohdhg ighghgd nddhghe hdohge khd dhdg lhohgohe lobortis tincidunt. Faucibus felis nulla faucibus
                         tellus nunc. Platea risus nibh feugiat dui phasellus phasellus viverra ac leo. Pellentesque
                         venenatis, ut risus at. dolor sit amet, consectetur adipiscing elit. Vitae, </p>
-                   <a href="pages/AboutUS.html"><button class="mt-5">Read More</button></a> 
+                    <a href="pages/AboutUS.html"><button class="mt-5">Read More</button></a>
                 </div>
             </div>
         </div>
@@ -267,7 +266,7 @@
             </div>
             <div class="col-lg-12">
                 <div class="d-flex align-items-center justify-content-center">
-                     <a href="/pages/treasureList.html"><button>See More</button></a>
+                    <a href="/pages/treasureList.html"><button>See More</button></a>
                 </div>
             </div>
         </div>
@@ -403,7 +402,7 @@
                     <span>Wastexpert</span>
                 </div>
                 <div class="col-lg-6 formFF">
-                    <form action="submit" >
+                    <form action="submit">
                         <label for="">Subscribe to our Newsletter</label><br>
                         <input type="e-mail" placeholder="Enter your email address">
                         <span><button>Sign up</button></span>
