--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
 
     <section class="section1">
         <div class="container">
-            <div class="row d-flex justify-content-center align-items-center">
-                <div class="col-md-6 ">
+            <div class="row ">
+                <div class="col-md-6  ">
                     <h1>Waste to Wealth just got better</h1>
                     <p>The Waste to Wealth Mission brings scientific processing of waste to the forefront to build a
                         zero landfill and zero waste nation.</p>
                     <a href="/signup.html" target="blank"><button class="btn1">Get Started</button></a>
-                    <a href="https://youtu.be/4JDGFNoY-rQ"><button class="btn2"><i class="fa-solid fa-circle-play"></i></button></a> 
+                    <a href="https://youtu.be/4JDGFNoY-rQ"><button class="btn2"><i class="fa-solid fa-circle-play">Press Play</i></button></a> 
                 </div>
                 <div class="col-md-6 myimg">
                     <img src="/images/FirstSectionImg.png" alt="image" class="imgboy">
