--- a/forms.html
+++ b/forms.html
@@ -202,17 +202,13 @@
             
             <select class="form-select remove " aria-label="Default select example" id="validationCustom05" required>
 
-                <option selected></option>
-                <option value="1">Ekiti</option>
-                <option value="2">Lagos
-
-
-
-                </option>
-                <option value="3">Ogun</option>
-                <option value="4">Ondo</option>
-                <option value="5">Osun</option>
-                <option value="6">Oyo</option>
+                <option selected>OGUN</option>
+                <option value="2">LAGOS</option>
+                <option value="5">OSUN</option>
+                <option value="1">EKITI</option>
+                <option value="4">ONDO</option>
+                <option value="6">OYO</option>
+                <option value="3"></option>
             </select>
             <div class="invalid-feedback">Please select your location</div>
             </div>
