almost done with this and also sorting the three indicating images down

--- a/board.html
+++ b/board.html
@@ -19,30 +19,31 @@
         </div>
         <img src="/img/boardLogo.svg" alt="">
         <ul id="navOption">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact us</a></li>
-            <li><a href="#">FAQ</a></li>
+            <a href="#">About Us</a>
+            <a href="#">Services</a>
+            <a href="#">Contact us</a>
+            <a href="#">FAQ</a>
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
         </ul>
-        <form class="d-flex search">
+        <!-- <form class="d-flex search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-        <img src="/img/2ndHamburgerForMobile.svg"  class="navbutton" alt="">
+        </form> -->
+        <img src="/img/2ndHamburgerForMobile.svg" class="navbutton" alt="">
+        <img src="/img/close.svg" alt="" id="closeButton" class="none">
     </header>
     <main>
         <aside>
             <ul class="bunmi">
-            <a href="#"><img src="/img/boardHomelink.svg" alt=""></a>
-            <a href="#"><img src="/img/whiteMan.svg" alt=""></a>
-            <a href="#"><img src="/img/boardLocation.svg" alt=""></a>
-            <a href="#"><img src="" alt=""></a>
-            <a href="#"><img src="" alt=""></a>
-        </ul>
+                <a href="#"><img src="/img/boardHomelink.svg" alt=""></a>
+                <a href="#"><img src="/img/whiteMan.svg" alt=""></a>
+                <a href="#"><img src="/img/boardLocation.svg" alt=""></a>
+                <a href="#"><img src="" alt=""></a>
+                <a href="#"><img src="" alt=""></a>
+            </ul>
         </aside>
         <section class="container why">
             <div>
@@ -77,15 +78,16 @@
                 <div>
                     <div class="navigation">
                         <img class="no" src="./img/boardNavigation.svg" alt="">
-                    <img class="img-fluid mo" src="./img/manWithStyleHand.svg" alt="">
-                </div>
+                        <img class="img-fluid mo" src="./img/manWithStyleHand.svg" alt="">
+                    </div>
                     <p class="recycle">Recycle</p>
-                    <p class="sit">sit amet, consectetur adipiscing elit. Mollis leo auctor a scelerisque <br> vel sit cras eu
+                    <p class="sit">sit amet, consectetur adipiscing elit. Mollis leo auctor a scelerisque <br> vel sit
+                        cras eu
                         consectetur.
                         Viverra venenatis, mauris diam dolor cras a. </p>
                 </div>
                 <div class="three"><img class="img-fluid " src="./img/threePeople.svg" alt="">
-                    <p  class="recycle"> Reuse </p>
+                    <p class="recycle"> Reuse </p>
                     <p class="sit">
                         sit amet, consectetur adipiscing elit. Mollis leo auctor a scelerisque <br> vel sit cras eu
                         consectetur.
@@ -94,10 +96,10 @@
                 </div>
                 <div class="three">
                     <div class="navigat">
-                        <img src="./img/boardNavigation.svg" alt="">
-                    <img class="img-fluid three not" src="./img/manOnGreen.svg" alt="">
-                </div>
-                    <p  class="recycle">Reintegrate</p>
+                        <img class="nop" src="./img/boardNavigation.svg" alt="">
+                        <img class="img-fluid three not" src="./img/manOnGreen.svg" alt="">
+                    </div>
+                    <p class="recycle">Reintegrate</p>
                     <p class="sit">
                         sit amet, consectetur adipiscing elit. Mollis leo auctor a scelerisque <br> vel sit cras eu
                         consectetur.
@@ -106,6 +108,17 @@
                 </div>
             </div>
             <button class="continue">Continue</button>
+            <div class="doll">
+                <div class="blo">
+                    <img src="./img/deepGreen.svg" alt="">
+                </div>
+                <div class="blo">
+                    <img src="./img/fairGreen.svg" alt="">
+                </div>
+                <div class="blo">
+                    <img src="./img/lightGreen.svg" alt="">
+                </div>
+            </div>
         </section>
     </main>
 
@@ -113,7 +126,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-        <script src="/main.js"></script>
+    <script src="/main.js"></script>
 </body>
 
 </html>
