--- a/board.html
+++ b/board.html
@@ -41,8 +41,11 @@
                 <a href="#"><img src="/img/boardHomelink.svg" alt=""></a>
                 <a href="#"><img src="/img/whiteMan.svg" alt=""></a>
                 <a href="#"><img src="/img/boardLocation.svg" alt=""></a>
-                <a href="#"><img src="" alt=""></a>
-                <a href="#"><img src="" alt=""></a>
+                <a href="#"><img src="/img/boardRecycling.svg" alt=""></a>
+                <a href="#"><img src="/img/boardFlip.svg" alt=""></a>
+                <a href="#"><img src="/img/boardHistory.svg" alt=""></a>
+                <a href="#"><img src="/img/boardEmail.svg" alt=""></a>
+                <a href="#"><img src="/img/boardSettings.svg" alt=""></a>
             </ul>
         </aside>
         <section class="container why">
@@ -111,11 +114,7 @@
             <div class="doll">
                 <div class="blo">
                     <img src="./img/deepGreen.svg" alt="">
-                </div>
-                <div class="blo">
                     <img src="./img/fairGreen.svg" alt="">
-                </div>
-                <div class="blo">
                     <img src="./img/lightGreen.svg" alt="">
                 </div>
             </div>
