--- a/pages/collector.html
+++ b/pages/collector.html
@@ -75,19 +75,19 @@
         </div>
     </header>
 
-    <section class="section1">
+    <section class="section11">
         <div class="container">
-            <div class="row d-flex justify-content-center align-items-center">
+            <div class="row ">
                 <div class="col-md-6 ">
                     <h1 class="collectorw">A Collector With Class</h1>
                     <p>Simply sign up, Get screened to be a Collector and Start earning cool cash immediately! Easy
                         peasy
                     </p>
-                    <button class="btnn">Become a Collector</button>
+                <a href="/pages/LocationTable.html"> <button class="btnn mb-5"> Become a Collector</button></a>   
 
                 </div>
-                <div class="col-md-6 myimg">
-                    <img src="/images/CollectorWclass.png" alt="image" class="imgboy">
+                <div class="col-md-6 d-flex justify-content-center align-items-centerimg-fluid myimg">
+                    <img src="/images/CollectorWclass.png" alt="image"  class=" img-fluid imgboy">
                 </div>
             </div>
         </div>
