work in progres

--- a/board.html
+++ b/board.html
@@ -19,6 +19,14 @@
         </div>
         <img src="/img/boardLogo.svg" alt="">
         <ul id="navOption">
+            <a href="#"><img src="./img/boardHomelink.svg" alt=""></a>
+            <a href="#"><img src="./img/whiteMan.svg" alt=""></a>
+            <a href="#"><img src="./img/boardLocation.svg" alt=""></a>
+            <a href="#"><img src="./img/boardRecycling.svg" alt=""></a>
+            <a href="#"><img src="./img/boardFlip.svg" alt=""></a>
+            <a href="#"><img src="./img/boardHistory.svg" alt=""></a>
+            <a href="#"><img src="./img/boardEmail.svg" alt=""></a>
+            <a href="#"><img src="./img/boardSettings.svg" alt=""></a>
             <a href="#">About Us</a>
             <a href="#">Services</a>
             <a href="#">Contact us</a>
