--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 justify-content-center align-items-center ">
-                    <h1 class="mt-5 " style="color: rgba(2, 140, 50, 1);"> Waste to Wealth just got better</h1>
-                    <p style="color:  rgba(0, 0, 0, 0.4);">The Waste to Wealth Mission brings scientific processing of waste to the forefront to build a
+                    <h1 class="mt-5 " > Waste to Wealth just got better</h1>
+                    <p >The Waste to Wealth Mission brings scientific processing of waste to the forefront to build a
                         zero landfill and zero waste nation.</p>
                     <a href="/signup.html" target="blank"><button class="btn1">Get Started</button></a>
                     <a href="https://youtu.be/4JDGFNoY-rQ"><button class="btn2"><i class="fa-solid fa-circle-play">Press Play</i></button></a> 
