--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
 <body>
 
-    <header class="color head">
+    <header class="color head" >
         <div class="container">
-            <div class="wrap df just">
+            <div class="wrap df just" >
                 <div class="logo df">
-                    <img src="/images/Logo.png" alt="wastelogo">
+                   <a href="#home"><img src="/images/Logo.png" alt="wastelogo"></a> 
                     <span>Wastexpert</span>
                 </div>
                 <nav class="navmenu df just" id="nav">
@@ -77,7 +77,7 @@
         </div>
     </header>
 
-    <section class="section1">
+    <section class="section1" id="home">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 justify-content-center align-items-center ">
@@ -85,7 +85,7 @@
                     <p >The Waste to Wealth Mission brings scientific processing of waste to the forefront to build a
                         zero landfill and zero waste nation.</p>
                     <a href="/signup.html" target="blank"><button class="btn1">Get Started</button></a>
-                    <a href="https://youtu.be/4JDGFNoY-rQ"><button class="btn2"><i class="fa-solid fa-circle-play">Press Play</i></button></a> 
+                    <a href="https://youtu.be/4JDGFNoY-rQ"><button class="btn2"><i class="fa-solid fa-circle-play playP">Press Play</i></button></a> 
                 </div>
                 <div class="col-md-6 d-flex justify-content-center align-items-center myimg">
                     <img src="/images/FirstSectionImg.png" alt="image" class=" img-fluid  imgboy">
