--- a/pages/treasureList.html
+++ b/pages/treasureList.html
@@ -18,7 +18,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-                <a class="navbar-brand" href="#"><img src="/Asset/img/LogoWX.svg" alt=""> <span>Wastexpert</span></a>
+                <a class="navbar-brand" href="/index.html"><img src="/Asset/img/LogoWX.svg" alt=""> <span>Wastexpert</span></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -62,7 +62,7 @@
 
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="10000000">
+            <div class="carousel-item active" data-bs-interval="0.5">
                 <section class="wealth">
                     <div class="container">
                         <div class="row">
@@ -78,7 +78,7 @@
                     </div>
                 </section>
             </div>
-            <div class="carousel-item" data-bs-interval="10000000">
+            <div class="carousel-item" data-bs-interval="0.5">
                 <section class="wealth2">
                     <div class="container">
                         <div class="row">
@@ -95,7 +95,7 @@
                     </div>
                 </section>
             </div>
-            <div class="carousel-item" data-bs-interval="10000000">
+            <div class="carousel-item" data-bs-interval="0.5">
                 <section class="wealth3">
                     <div class="container">
                         <div class="row">
