--- a/pages/services.html
+++ b/pages/services.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
             <div class="logo">
-                <img class="waste" src="/Images/logo.svg" alt="Logo">
+              <a href="/index.html"> <img class="waste" src="/Images/logo.svg" alt="Logo"></a> 
                 <span> Wastexpert</span>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
