--- a/board.html
+++ b/board.html
@@ -17,7 +17,7 @@
             <img src="/img/boardHamburger.svg" class="navBtn" alt="" id="menuBtn">
             <img src="/img/close.svg" alt="" id="closeBtn">
         </div>
-        <img src="/img/boardLogo.svg" alt="">
+        <a href="#"><img src="/img/boardLogo.svg" alt=""></a>
         <ul id="navOption">
             <!-- <a href="#"><img src="./img/boardHomelink.svg" alt=""></a>
             <a href="#"><img src="./img/whiteMan.svg" alt=""></a>
