--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <h1 class="mt-5 " > Waste to Wealth just got better</h1>
                     <p >The Waste to Wealth Mission brings scientific processing of waste to the forefront to build a
                         zero landfill and zero waste nation.</p>
-                    <a href="/signup.html" target="blank"><button class="btn1">Get Started</button></a>
+                    <a href="/pages/signup.html" target="blank"><button class="btn1">Get Started</button></a>
                     <a href="https://youtu.be/4JDGFNoY-rQ"><button class="btn2"><i class="fa-solid fa-circle-play playP">Press Play</i></button></a> 
                 </div>
                 <div class="col-md-6 d-flex justify-content-center align-items-center myimg">
