--- a/pages/AboutUS.html
+++ b/pages/AboutUS.html
@@ -44,14 +44,14 @@
                             </ul>
                         </li>
                         <li class="nav-item px-3">
-                            <a class="nav-link " aria-current="page" href="#">Contact us</a>
+                            <a class="nav-link " aria-current="page" href="/pages/contact.html">Contact us</a>
                         </li>
                         <li class="nav-item px-3">
-                            <a class="nav-link" href="#">FAQ</a>
+                            <a class="nav-link" href="/pages/FAQ.html">FAQ</a>
                         </li>
                         <li class="nav-item px-3">
-                            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                                Login
+                          <a href="/pages/loginPage.html"><button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                            Login</a>  
                             </button>
                         </li>
                     </ul>
@@ -161,7 +161,7 @@
                         <form action="">
                             <label for="e-mail">Subscribe to our Newsletter</label>  <br>
                             <span class="d-flex">
-                                <input type="email" name="" placeholder="Enter your email address here" id=""> <button
+                                <input type="email" name="" placeholder="Enter your email address here" id=""> <a href="/pages/loginPage.html"></a> <button
                                     type="submit"> Sign Up</button>
                             </span>
                             </form>
