--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             </div>
                         </li>
                         <li> <a href="#Contactus">Contact us</a></li>
-                        <li><a href="#FAQ">FAQ</a></li>
+                        <li><a href="/pages/FAQ.html">FAQ</a></li>
                         <li> <a href="/pages/loginPage.html"><button>Login</button></a></li>
                     </ul>
                 </nav>
