--- a/board.html
+++ b/board.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./styles/waste.css">
+    <link rel="stylesheet" href="/styles/board/waste.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
@@ -19,14 +19,14 @@
         </div>
         <a href="#"><img src="/img/boardLogo.svg" alt=""></a>
         <ul id="navOption">
-            <!-- <a href="#"><img src="./img/boardHomelink.svg" alt=""></a>
-            <a href="#"><img src="./img/whiteMan.svg" alt=""></a>
-            <a href="#"><img src="./img/boardLocation.svg" alt=""></a>
-            <a href="#"><img src="./img/boardRecycling.svg" alt=""></a>
-            <a href="#"><img src="./img/boardFlip.svg" alt=""></a>
-            <a href="#"><img src="./img/boardHistory.svg" alt=""></a>
-            <a href="#"><img src="./img/boardEmail.svg" alt=""></a>
-            <a href="#"><img src="./img/boardSettings.svg" alt=""></a> -->
+            <!-- <a href="#"><img src="/img/boardHomelink.svg" alt=""></a>
+            <a href="#"><img src="/img/whiteMan.svg" alt=""></a>
+            <a href="#"><img src="/img/boardLocation.svg" alt=""></a>
+            <a href="#"><img src="/img/boardRecycling.svg" alt=""></a>
+            <a href="#"><img src="/img/boardFlip.svg" alt=""></a>
+            <a href="#"><img src="/img/boardHistory.svg" alt=""></a>
+            <a href="#"><img src="/img/boardEmail.svg" alt=""></a>
+            <a href="#"><img src="/img/boardSettings.svg" alt=""></a> -->
             <a href="#">About Us</a>
             <a href="#">Services</a>
             <a href="#">Contact us</a>
@@ -67,8 +67,8 @@
             </div>
             <div class="nonet">
                 <div>
-                    <img class="mov" src="./img/boardSmallDot.svg" alt="">
-                    <img class="move" src="./img/boardSmallMan.svg" alt="">
+                    <img class="mov" src="/img/boardSmallDot.svg" alt="">
+                    <img class="move" src="/img/boardSmallMan.svg" alt="">
                 </div>
                 <div>
                     <p class="flextext">
@@ -79,7 +79,7 @@
                     </p>
                 </div>
                 <div>
-                    <img src="./img/notificationImage.svg" alt="">
+                    <img src="/img/notificationImage.svg" alt="">
                 </div>
             </div>
         </section>
@@ -88,8 +88,8 @@
             <div class="con">
                 <div>
                     <div class="navigation">
-                        <img class="no" src="./img/boardNavigation.svg" alt="">
-                        <img class="img-fluid mo" src="./img/manWithStyleHand.svg" alt="">
+                        <img class="no" src="/img/boardNavigation.svg" alt="">
+                        <img class="img-fluid mo" src="/img/manWithStyleHand.svg" alt="">
                     </div>
                     <p class="recycle">Recycle</p>
                     <p class="sit">sit amet, consectetur adipiscing elit. Mollis leo auctor a scelerisque <br> vel sit
@@ -97,7 +97,7 @@
                         consectetur.
                         Viverra venenatis, mauris diam dolor cras a. </p>
                 </div>
-                <div class="three"><img class="img-fluid " src="./img/threePeople.svg" alt="">
+                <div class="three"><img class="img-fluid " src="/img/threePeople.svg" alt="">
                     <p class="recycle"> Reuse </p>
                     <p class="sit">
                         sit amet, consectetur adipiscing elit. Mollis leo auctor a scelerisque <br> vel sit cras eu
@@ -107,8 +107,8 @@
                 </div>
                 <div class="three">
                     <div class="navigat">
-                        <img class="nop" src="./img/boardNavigation.svg" alt="">
-                        <img class="img-fluid three not" src="./img/manOnGreen.svg" alt="">
+                        <img class="nop" src="/img/boardNavigation.svg" alt="">
+                        <img class="img-fluid three not" src="/img/manOnGreen.svg" alt="">
                     </div>
                     <p class="recycle">Reintegrate</p>
                     <p class="sit">
@@ -121,9 +121,9 @@
             <button class="continue">Continue</button>
             <div class="doll">
                 <div class="blo">
-                    <img src="./img/deepGreen.svg" alt="">
-                    <img src="./img/fairGreen.svg" alt="">
-                    <img src="./img/lightGreen.svg" alt="">
+                    <img src="/img/deepGreen.svg" alt="">
+                    <img src="/img/fairGreen.svg" alt="">
+                    <img src="/img/lightGreen.svg" alt="">
                 </div>
             </div>
         </section>
@@ -133,7 +133,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script src="/main.js"></script>
+    <script src="/board.js"></script>
 </body>
 
 </html>
