added some stuff

--- a/pages/loginPage.html
+++ b/pages/loginPage.html
@@ -25,6 +25,7 @@
     <div class="LoginContainer container">
         <form class="row g-3 needs-validation" id="loginForm" novalidate>
             <h2>Log in</h2>
+            <p id="loginError"></p>
             <div class="col-md-12">
                 <label for="loginEmail" class="form-label">Email address</label>
                 <input type="email" name="email" class="form-control" id="loginEmail" placeholder="Your email address here"
