--- a/pages/signup.html
+++ b/pages/signup.html
@@ -25,7 +25,7 @@
     
     <div class="SignUpContainer container">
 
-        <form action="" class="row g-4 needs-validation" novalidate>
+        <form id="signupForm" class="row g-4 needs-validation" novalidate>
             <div class="col-md-12">
                 <h2>Sign Up</h2>
             </div>
