--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                 </ul>
                             </div>
                         </li>
-                        <li> <a href="#Contactus">Contact us</a></li>
+                        <li> <a href="/pages/contact.html">Contact us</a></li>
                         <li><a href="/pages/FAQ.html">FAQ</a></li>
                         <li> <a href="/pages/loginPage.html"><button>Login</button></a></li>
                     </ul>
