--- a/pages/contact.html
+++ b/pages/contact.html
@@ -100,20 +100,20 @@
                                 <h3>Get in touch</h3>
                             </div>
                             <div class="col-lg-12">
-                                <label for="validationCustom01" class="form-label">Name</label>
-                                <input type="text" class="form-control" id="validationCustom01"
+                                <label for="fullname" class="form-label">Name</label>
+                                <input type="text" name="name" class="form-control" id="fullname"
                                     placeholder="Your full name" required />
                                 <div class="invalid-feedback">Full name is required</div>
                             </div>
                             <div class="col-lg-12">
-                                <label for="validationCustom02" class="form-label">Email address</label>
-                                <input type="email" class="form-control" id="validationCustom02"
+                                <label for="email" class="form-label">Email address</label>
+                                <input type="email" name="email" class="form-control" id="email"
                                     placeholder="Your email address" required />
                                 <div class="invalid-feedback">Email is required</div>
                             </div>
                             <div class="col-lg-12">
-                                <label for="validationCustom03" class="form-label">Subject</label>
-                                <input type="text" class="form-control" id="validationCustom03" required />
+                                <label for="subject" class="form-label">Subject</label>
+                                <input type="text" name="" class="form-control" id="subject" required />
                                 <div class="invalid-feedback">This field is required</div>
                             </div>
                             <div class="col-lg-12">
