--- a/pages/contact.html
+++ b/pages/contact.html
@@ -95,7 +95,7 @@
                 <div class="col-lg-7">
                     <div class="SignUpContainer container">
 
-                        <form action="" class="row g-4 needs-validation" novalidate>
+                        <form id="contactForm" class="row g-4 needs-validation" novalidate>
                             <div class="col-md-12">
                                 <h3>Get in touch</h3>
                             </div>
@@ -328,6 +328,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+        <script src="/contact.js"></script>
 </body>
 
 </html>
