--- a/pages/contact.html
+++ b/pages/contact.html
@@ -101,7 +101,7 @@
                             </div>
                             <div class="col-lg-12">
                                 <label for="fullname" class="form-label">Name</label>
-                                <input type="text" name="name" class="form-control" id="fullname"
+                                <input type="text" name="fullName" class="form-control" id="fullName"
                                     placeholder="Your full name" required />
                                 <div class="invalid-feedback">Full name is required</div>
                             </div>
