--- a/pages/contact.html
+++ b/pages/contact.html
@@ -104,13 +104,13 @@
                                 <label for="fullname" class="form-label">Name</label>
                                 <input type="text" name="fullName" class="form-control" id="fullName"
                                     placeholder="Your full name" required />
-                                <div class="invalid-feedback">Full name is required</div>
+                                <div class="invalidfullName">Full name is required</div>
                             </div>
                             <div class="col-lg-12">
                                 <label for="email" class="form-label">Email address</label>
                                 <input type="email" name="email" class="form-control" id="email"
                                     placeholder="Your email address" required />
-                                <div class="invalid-feedback">Email is required</div>
+                                <div class="invalidEmail">Email is required</div>
                             </div>
                             <div class="col-lg-12">
                                 <label for="subject" class="form-label">Subject</label>
