--- a/pages/contact.html
+++ b/pages/contact.html
@@ -115,14 +115,14 @@
                             <div class="col-lg-12">
                                 <label for="subject" class="form-label">Subject</label>
                                 <input type="text" name="subject" class="form-control" id="subject" required />
-                                <div class="invalid-feedback">This field is required</div>
+                                <div class="invalidvalidSubject">This field is required</div>
                             </div>
                             <div class="col-lg-12">
                                 <label for="validationCustom04" class="form-label">Message</label>
 
                                 <textarea name="message" class="form-control" id="message"
                                     style="width: 100%; height: 260px;" required></textarea>
-                                <div class="invalid-feedback">Leave a message</div>
+                                <div class="invalidvalidMsg">Leave a message</div>
                             </div>
                             <div class="col-lg-12"><button type="submit">Send</button></div>
                         </form>
