--- a/pages/contact.html
+++ b/pages/contact.html
@@ -104,18 +104,18 @@
                                 <label for="fullname" class="form-label">Name</label>
                                 <input type="text" name="fullName" class="form-control" id="fullName"
                                     placeholder="Your full name" required />
-                                <div class="invalidfullName">Full name is required</div>
+                                <div class="invalidfullName"></div>
                             </div>
                             <div class="col-lg-12">
                                 <label for="email" class="form-label">Email address</label>
                                 <input type="email" name="email" class="form-control" id="email"
                                     placeholder="Your email address" required />
-                                <div class="invalidEmail">Email is required</div>
+                                <div class="invalidEmail"></div>
                             </div>
                             <div class="col-lg-12">
                                 <label for="subject" class="form-label">Subject</label>
                                 <input type="text" name="subject" class="form-control" id="subject" required />
-                                <div class="invalidvalidSubject">This field is required</div>
+                                <div class="invalidvalidSubject"></div>
                             </div>
                             <div class="col-lg-12">
                                 <label for="validationCustom04" class="form-label">Message</label>
