--- a/index.html
+++ b/index.html
@@ -402,9 +402,9 @@
                     <span>Wastexpert</span>
                 </div>
                 <div class="col-lg-6 formFF">
-                    <form action="submit">
-                        <label for="">Subscribe to our Newsletter</label><br>
-                        <input type="e-mail" placeholder="Enter your email address">
+                    <form id="subscribeForm2">
+                        <label for="desktopEmail">Subscribe to our Newsletter</label><br>
+                        <input type="e-mail" name="email" id="desktopEmail" placeholder="Enter your email address">
                         <span><button>Sign up</button></span>
                     </form>
                 </div>
@@ -470,11 +470,11 @@
                         for household items offered through our Wastexpert store.</p>
                 </div>
                 <div class="col-lg-12">
-                    <form action="submit">
-                        <label for="">Subscribe to our Newsletter</label><br>
+                    <form id="subscribeForm">
+                        <label for="email">Subscribe to our Newsletter</label><br>
                         <div>
-                            <input type="e-mail" placeholder="Enter your email address">
-                            <span><button>Sign up</button></span>
+                            <input type="e-mail" name="email" id="subscribeEmail" style="outline: none;" placeholder="Enter your email address">
+                            <span><button type="submit">Sign up</button></span>
                         </div>
                     </form>
                 </div>
@@ -500,12 +500,10 @@
 
     </footer>
 
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-    <script src="main.js"></script>
+    <script src="/main.js"></script>
 </body>
 
 </html>
