done with obile subscribe area

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                     <span>Wastexpert</span>
                 </div>
                 <div class="col-lg-6 formFF">
-                    <form id="subscribeForm2">
+                    <form id="desktopFormSubmit">
                         <label for="desktopEmail">Subscribe to our Newsletter</label><br>
                         <input type="e-mail" name="email" id="desktopEmail" placeholder="Enter your email address">
                         <span><button>Sign up</button></span>
