done with obile subscribe area

--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                 <div class="col-lg-6 formFF">
                     <form id="desktopFormSubmit">
                         <label for="desktopEmail">Subscribe to our Newsletter</label><br>
-                        <input type="e-mail" name="email" id="desktopEmail" placeholder="Enter your email address">
+                        <input type="e-mail" name="email" id="desktopEmail" style="outline: none;" placeholder="Enter your email address">
                         <span><button>Sign up</button></span>
                     </form>
                 </div>
