done with obile subscribe area

--- a/pages/services.html
+++ b/pages/services.html
@@ -203,7 +203,7 @@
                     <div class=" d-flex">
                         <input type="email" placeholder="Enter your email address here" name="subscription"
                             id="subscribe">
-                        <button><a href="">Sign up</a></button>
+                        <button><a href="/index.html">Sign up</a></button>
                     </div>
 
                 </div>
@@ -340,13 +340,13 @@
                     use to redeem/shop for household items offered through our Wastexpert store.
                 </p>
             </div>
-            <div class="col-lg-12">
+            <form class="col-lg-12" id="subscribeForm">
                 <label for="subscribe">Subscribe to our Newsletter</label>
-                <div class=" d-flex ">
-                    <input type="email" placeholder="Enter your email address" name="subscription" id="subscribe">
-                    <button type="submit"><a href="">Sign up</a></button>
+                <div class="d-flex ">
+                    <input type="email" name="email" id="subEmail" placeholder="Enter your email address" name="subscription" id="subscribe">
+                    <button type="submit"><a href="/index.html">Sign up</a></button>
                 </div>
-            </div>
+            </form>
             <div class="col-lg-12">
                 <ul>
                     <li> <a href="">About</li></a>
@@ -379,23 +379,10 @@
             </div>
         </div>
     </footer>
-
-
-
-
-
-
-
-
-
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <script src="/main.js"></script>
-
 </body>
 
 </html>
