done with obile subscribe area

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -138,12 +138,12 @@
                     <p>Wastexpert</p>
 
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6" id="desktopSuscribeForm">
                     <label for="subscribe">Subscribe to our Newsletter</label>
                     <div class=" d-flex">
-                        <input type="email" placeholder="Enter your email address here" name="subscription"
+                        <input type="email" placeholder="Enter your email address here" name="email"
                             id="subscribe">
-                        <button><a href="">Sign up</a></button>
+                        <button type="submit" style="color: #fff;">Sign up</button>
                     </div>
                 </div>
             </div>
