done with obile subscribe area

--- a/pages/AboutUS.html
+++ b/pages/AboutUS.html
@@ -158,11 +158,11 @@
                         <img src="/Asset/img/footerLogo.svg" class="img-fluid" alt="">
                     </div>
                     <div class=" enter col-md-6 pt-5 ">
-                        <form action="">
+                        <form>
                             <label for="e-mail">Subscribe to our Newsletter</label>  <br>
                             <span class="d-flex">
-                                <input type="email" name="" placeholder="Enter your email address here" id=""> <a href="/pages/loginPage.html"></a> <button
-                                    type="submit"> Sign Up</button>
+                                <input type="email" name="" placeholder="Enter your email address here" id=""> <button
+                                    type="submit"><a href="/index.html#desktopFormSubmit" style="color: inherit; font-size: inherit; text-decoration: none;"> Sign Up</a></button>
                             </span>
                             </form>
                         </div>
