--- a/pages/services.html
+++ b/pages/services.html
@@ -203,7 +203,7 @@
                     <div class=" d-flex">
                         <input type="email" placeholder="Enter your email address here" name="subscription"
                             id="subscribe">
-                        <button><a href="/index.html">Sign up</a></button>
+                        <button><a href="/index.html#desktopFormSubmit">Sign up</a></button>
                     </div>
 
                 </div>
@@ -344,7 +344,7 @@
                 <label for="subscribe">Subscribe to our Newsletter</label>
                 <div class="d-flex ">
                     <input type="email" name="email" id="subEmail" placeholder="Enter your email address" name="subscription" id="subscribe">
-                    <button type="submit"><a href="/index.html">Sign up</a></button>
+                    <button type="submit"><a href="/index.html#desktopFormSubmit">Sign up</a></button>
                 </div>
             </form>
             <div class="col-lg-12">
