done with obile subscribe area

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -143,7 +143,7 @@
                     <div class=" d-flex">
                         <input type="email" placeholder="Enter your email address here" name="subscription"
                             id="subscribe">
-                        <button><a href="/index.html#desktopFormSubmit">Sign up</a></button>
+                        <button><a href="/index.html#desktopFormSubmit" style="width: 100%; display: flex; align-items: center; justify-content: center; height: inherit; padding: inherit;">Sign up</a></button>
                     </div>
 
                 </div>
