linkins some stuff

--- a/pages/services.html
+++ b/pages/services.html
@@ -47,7 +47,7 @@
                         <a class="nav-link" href="/pages/contact.html">contact us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">FAQ</a>
+                        <a class="nav-link" href="/pages/FAQ.html">FAQ</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/pages/loginPage.html">Login</a>
