--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -38,19 +38,19 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav  mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">About us</a>
+                        <a class="nav-link active" aria-current="page" href="/pages/AboutUS.html">About us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="services.html">services</a>
+                        <a class="nav-link" href="/pages/services.html">services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">contact us</a>
+                        <a class="nav-link" href="/pages/contact.html">contact us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="FAQ.html">FAQ</a>
+                        <a class="nav-link" href="#">FAQ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">  Login</a>
+                        <a class="nav-link" href="/pages/loginPage.html">  Login</a>
                     </li>
                 </ul>
 
@@ -365,7 +365,7 @@
                 <label for="subscribe">Subscribe to our Newsletter</label>
                 <div class=" d-flex ">
                     <input type="email" placeholder="Enter your email address" name="subscription" id="subscribe">
-                    <button type="submit"><a href="">Sign up</a></button>
+                    <button type="submit"><a href="/index.html#desktopFormSubmit">Sign up</a></button>
                 </div>
     
     
